# kata-rust-agent

./: .gitmodules  .travis.yml  Cargo.toml  Makefile  README.md
.ci/: debug_scripts.sh  lib.sh
libcontainer/: Cargo.toml
libcontainer/src/: capabilities.rs  container.rs  errors.rs  factory.rs  init.rs  intelrdt.rs  lib.rs  mount.rs  process.rs  specconv.rs  stats.rs  sync-bak.rs  sync.rs  user.rs
libcontainer/src/cgroups/: mod.rs  systemd.rs
libcontainer/src/cgroups/fs/: mod.rs
libcontainer/src/configs/: device.rs  mod.rs  namespaces.rs  validator.rs
oci/: Cargo.toml
oci/src/: lib.rs  serialize.rs
protocols/: Cargo.toml
protocols/hack/: update-generated-proto.sh
protocols/src/: agent.rs  empty.rs  lib.rs  oci.rs  types.rs
rustjail/: Cargo.toml  build.rs.bak
rustjail/src/: capabilities.rs  container.rs  errors.rs  factory.rs  init.rs  intelrdt.rs  lib.rs  mount.rs  process.rs  specconv.rs  stats.rs  sync.rs  user.rs  validator.rs
rustjail/src/cgroups/: mod.rs
rustjail/src/cgroups/fs/: mod.rs
rustjail/src/configs/: device.rs  mod.rs  namespaces.rs
src/: container.rs  device.rs  grpc.rs  main.rs  mount.rs  namespace.rs  netlink.rs  network.rs  random.rs  sandbox.rs  uevent.rs  version.rs
