[package]
name = "kata-agent"
version = "0.1.0"
authors = ["Yang Bo <bo@hyper.sh>"]
edition = "2018"

[dependencies]
#oci = { path = "oci" }
#libcontainer = { path = "libcontainer" }
protocols = { path = "protocols" }
lazy_static = "1.3.0"
error-chain = "0.12.1"
log = "0.4.6"
simple-logging = "2.0.2"
grpcio = { git = "git@gitlab.alipay-inc.com:zh203158/grpc-rs.git", branch = "rust_agent" }
protobuf = "2.6.1"
futures = "0.1.27"
